# ush

./: #file#  .file.txt  .swo  .swp  1  2  3  4  5  6  999  CMakeLists.txt  Makefile  builtin_cd.c  builtin_echo.c  builtin_env.c  builtin_export.c  builtin_init_stract.c  builtin_pwd.c  builtin_unset.c  builtin_which.c  main.c  mx_any_count.c  mx_arr_length.c  mx_arrows_motion.c  mx_builtin_exit.c  mx_cd_l.c  mx_cd_p.c  mx_check_cmd.c  mx_check_env.c  mx_check_quotes.c  mx_combcounter.c  mx_command_pars.c  mx_command_sub.c  mx_complex_cmd.c  mx_control_chars.c  mx_conveer.c  mx_counter.c  mx_environ_copy.c  mx_exec_env.c  (+48 more)
inc/: ush.h
libmx/: Makefile
libmx/inc/: libmx.h
src/: .file.txt  builtin_cd.c  builtin_echo.c  builtin_env.c  builtin_init_stract.c  builtin_pwd.c  builtin_unset.c  builtin_which.c  buuiltin_which.c  main.c  mx_all_builtin.c  mx_any_count.c  mx_arr_length.c  mx_arrows_motion.c  mx_builtin_alias.c  mx_cd_l.c  mx_cd_p.c  mx_check_cmd.c  mx_check_env.c  mx_check_in_pwd.c  mx_check_quotes.c  mx_choose_way.c  mx_clear.c  mx_cmd_return_alias.c  mx_command_pars.c  mx_command_sub.c  mx_config_init.c  mx_control_chars.c  mx_conveer.c  mx_count_pipes.c  mx_count_streams.c  mx_dash_spaces.c  mx_del_chararr.c  mx_del_conveer.c  mx_echo_special.c  mx_env_set_var.c  mx_environ_handler_env.c  mx_exec_env.c  mx_export_var_to_lists.c  mx_file_input.c  (+58 more)
